@@ -1,3 +1,5 @@
+- Improvement: Registration active state takes into account the whole execution year
+
 25.9.1 (13-01-2020)
 - Fix: Possible ExecutionIntervals of Dismissals must be childs
 - Refactor: Replace usage of ExecutionSemester.getSemester() to ExecutionSemester.getChildOrder()
